@@ -5,7 +5,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Set default allowed type for textareas to text/plain.
+  [mathias.leimgruber]
 
 
 1.2 (2011-12-07)
@@ -46,7 +47,7 @@ Changelog
 
 1.1.5
 -----
-- Bugfix: Check for contact reference. 
+- Bugfix: Check for contact reference.
   [17.02.2011, mathias.leimgruber]
 
 1.1.4
